<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.agrovector.laboratory.photometer.AboutProgram">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/textView22">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/icon"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"/>

            <TextView
                android:id="@+id/version"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/text_medium_size"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/text_big_size"
                android:text="@string/site"/>

            <TextView
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/text_big_size"
                android:text="@string/site2"
                android:textColor="@color/colorAccent"
                android:onClick="goToSite"/>



            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/text_big_size"
                android:text="@string/copyright" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/text_big_size"
                android:text="@string/copyright2" />
        </LinearLayout>




    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/developer"
        android:textSize="15sp"
        android:id="@+id/textView22"
        android:layout_above="@+id/textView21"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:textSize="15sp"
        android:text="@string/developer2"
        android:textColor="@color/colorAccent"
        android:onClick="goToSiteDeveloper"
        android:layout_marginBottom="15dp"
        android:id="@+id/textView21" />

</RelativeLayout>
