<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:tag="fragment_edit">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/companu_logo"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_medium_size" />

            <ImageView
                android:id="@+id/image_view_logo"
                android:layout_width="match_parent"
                android:layout_height="150sp"
                android:background="@color/image_background"
                android:foregroundGravity="center"
                android:src="@drawable/image" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right">

                <Button
                    android:id="@+id/button_logo_change_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/select"
                    android:textColor="@color/colorAccent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true" />

                <Button
                    android:id="@+id/button_logo_img_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/button_logo_change_img"
                    android:layout_toStartOf="@+id/button_logo_change_img"
                    android:background="@color/transparent"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/clean"
                    android:textColor="@color/colorAccent" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:isScrollContainer="false"
                android:padding="10dp"
                android:text="@string/company_info"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_medium_size" />

            <EditText
                android:id="@+id/edit_text_company_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:ems="1"
                android:inputType="textCapSentences|textMultiLine"
                android:lines="6"
                android:padding="10dp"
                android:scrollHorizontally="true"
                android:textSize="@dimen/text_medium_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:clipChildren="false">

                <CheckBox
                    android:id="@+id/checkbox_save_as_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/set_as_default"
                    android:textSize="@dimen/text_big_size"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>